# GameAI

ShapeGenerator/: .gitignore  LatentTo3D.py  main.py  pyvenv.cfg
ShapeGenerator/Scripts/: activate  activate.bat  jsonpointer
backend/: .gitignore  GameAiBackend.sln  Tiltfile  docker-compose.override.yaml  docker-compose.yaml  run-all.ps1
backend/.github/: copilot-instructions.md
backend/GameAI.Shared/: Class1.cs
backend/Gateway.API/: Dockerfile.dev  Gateway.API.csproj  Gateway.API.http  Gateway.API.sln  Program.cs  ocelot.Development.json  ocelot.Docker.json
backend/Project.API/: Dockerfile.dev  Project.API.csproj  Project.API.http  Project.API.sln
backend/k8s/: configmap.yaml  conversation-deployment.yaml  gateway-deployment.yaml  ingress.yaml  namespace.yaml  postgres.yaml  project-deployment.yaml  rabbitmq.yaml  secrets.yaml
backend/k8s-prod/: README.md  configmap.yaml  conversation-deployment.yaml  gateway-deployment.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  project-deployment.yaml  rabbitmq.yaml  rbac.yaml  secrets.yaml  security-baseline.yaml
backend/scripts/: build-k8s.ps1  deploy-k8s.ps1  deploy-production.ps1  deploy.ps1  k8s-status.ps1  manage-k8s.ps1  monitor-production.ps1  run-all.ps1  stop-k8s.ps1  stop.ps1
front/: .editorconfig  .env  .env.sample  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
front/src-tauri/: 2  Cargo.toml  tauri.conf.json
front/src-tauri/capabilities/: default.json
front/src-tauri/src/: lib.rs
front/src-tauri/src/commands/: system.rs
(+147 files in other folders)
